<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_control</name>
  <version>0.0.0</version>
  <description>The diff_drive_control package</description>

  <maintainer email="antonio@todo.todo">antonio</maintainer>

  <license>TODO</license>
  <author email="a.camposeo3@studenti.poliba.it">Antonio Camposeo</author> 
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>